--- a/exercises/09_02_exset_04.tex
+++ b/exercises/09_02_exset_04.tex
@@ -7,7 +7,9 @@
 \exinput{exercises/09_02_ex_22}
 \exinput{exercises/09_02_ex_23}
 \exinput{exercises/09_02_ex_24}
+\exinput{exercises/09_02_ex_23a}
 \exinput{exercises/09_02_ex_25}
 \exinput{exercises/09_02_ex_26}
 \exinput{exercises/09_02_ex_28}
 \exinput{exercises/09_02_ex_29}
+\exinput{exercises/09_02_ex_23b}
