--- a/exercises/08_06_exercises.tex
+++ b/exercises/08_06_exercises.tex
@@ -8,4 +8,4 @@
 \exsetinput{exercises/08_06_exset_02}
 \exsetinput{exercises/08_06_exset_03}
 \exsetinput{exercises/08_06_exset_04}
-\exinput{exercises/08_06_ex_37}
+%\exinput{exercises/08_06_ex_37}
