--- a/text/08_Power_Series.tex
+++ b/text/08_Power_Series.tex
@@ -271,70 +271,70 @@ In Section \ref{sec:taylor_series}, as we study Taylor Series, we will learn how
 
 This example illustrates that it can be difficult to recognize an elementary function by its power series expansion. It is far easier to start with a known function, expressed in terms of elementary functions, and represent it as a power series function. One may wonder why we would bother doing so, as the latter function probably seems more complicated. In the next two sections, we show both \emph{how} to do this and  \emph{why} such a process can be beneficial.
 
-We conclude this section with an application of a power series for determining an explicit formula for a specific sequence.\\
+%We conclude this section with an application of a power series for determining an explicit formula for a specific sequence.\\
 
-\example{ex_ps6}{The power series whose coefficients are given by the Fibonacci sequence.}
-{The \textbf{Fibonacci sequence} $\{F_n\}$ is defined $F_0=0$, $F_1=1$, and $F_n=F_{n-2}+F_{n-1}$ for $n\geq2$.  Terms are computed by adding the previous two terms, as follows.
+%\example{ex_ps6}{The power series whose coefficients are given by the Fibonacci sequence.}
+%{The \textbf{Fibonacci sequence} $\{F_n\}$ is defined $F_0=0$, $F_1=1$, and $F_n=F_{n-2}+F_{n-1}$ for $n\geq2$.  Terms are computed by adding the previous two terms, as follows.
 
-\begin{align*}
-F_2 &= F_0+F_1 =\phantom{1}0+\phantom{1}1 =\phantom{1}1\\
-F_3 &= F_1+F_2 =\phantom{1}1+\phantom{1}1 =\phantom{1}2\\
-F_4 &= F_2+F_3 =\phantom{1}1+\phantom{1}2 =\phantom{1}3\\
-F_5 &= F_3+F_4 =\phantom{1}2+\phantom{1}3 =\phantom{1}5\\
-F_6 &= F_4+F_5 =\phantom{1}3+\phantom{1}5 =\phantom{1}8\\
-F_7 &= F_5+F_6 =\phantom{1}5+\phantom{1}8 =13\\
-F_8 &= F_6+F_7 =\phantom{1}8+13 =21\\
-F_9 &= F_7+F_8 =13+21 =34\\
-F_{10} &= F_8+F_9 =21+34 =55\\
-\end{align*}
+%\begin{align*}
+%F_2 &= F_0+F_1 =\phantom{1}0+\phantom{1}1 =\phantom{1}1\\
+%F_3 &= F_1+F_2 =\phantom{1}1+\phantom{1}1 =\phantom{1}2\\
+%F_4 &= F_2+F_3 =\phantom{1}1+\phantom{1}2 =\phantom{1}3\\
+%F_5 &= F_3+F_4 =\phantom{1}2+\phantom{1}3 =\phantom{1}5\\
+%F_6 &= F_4+F_5 =\phantom{1}3+\phantom{1}5 =\phantom{1}8\\
+%F_7 &= F_5+F_6 =\phantom{1}5+\phantom{1}8 =13\\
+%F_8 &= F_6+F_7 =\phantom{1}8+13 =21\\
+%F_9 &= F_7+F_8 =13+21 =34\\
+%F_{10} &= F_8+F_9 =21+34 =55\\
+%\end{align*}
 
-Determine a formula for $\sum\limits_{n=1}^\infty F_n x^n$.  Note that this series is also $\sum\limits_{n=0}^\infty F_n x^n$ because $F_0=0$.
-}
-{We will call this series $y$.  We begin by breaking off the first term so that we can use $F_n=F_{n-2}+F_{n-1}$ which holds for $n\geq2$.
+%Determine a formula for $\sum\limits_{n=1}^\infty F_n x^n$.  Note that this series is also $\sum\limits_{n=0}^\infty F_n x^n$ because $F_0=0$.
+%}
+%{We will call this series $y$.  We begin by breaking off the first term so that we can use $F_n=F_{n-2}+F_{n-1}$ which holds for $n\geq2$.
 
-\begin{align*}
-y &=\sum_{n=1}^\infty F_n x^n\\
-&=x+ \sum_{n=2}^\infty F_n x^n\\
-&=x+ \sum_{n=2}^\infty(F_{n-2} + F_{n-1}) x^n\\
-&=x+ \sum_{n=2}^\infty F_{n-2} x^n + \sum_{n=2}^\infty F_{n-1} x^n\\
-&=x+ \sum_{n=0}^\infty F_n x^{n+2} + \sum_{n=1}^\infty F_n x^{n+1}\\
-&=x+ x^2 \sum_{n=0}^\infty F_n x^n + x \sum_{n=1}^\infty F_n x^n\\
-&=x+ x^2y+xy.
-\end{align*}
+%\begin{align*}
+%y &=\sum_{n=1}^\infty F_n x^n\\
+%&=x+ \sum_{n=2}^\infty F_n x^n\\
+%&=x+ \sum_{n=2}^\infty(F_{n-2} + F_{n-1}) x^n\\
+%&=x+ \sum_{n=2}^\infty F_{n-2} x^n + \sum_{n=2}^\infty F_{n-1} x^n\\
+%&=x+ \sum_{n=0}^\infty F_n x^{n+2} + \sum_{n=1}^\infty F_n x^{n+1}\\
+%&=x+ x^2 \sum_{n=0}^\infty F_n x^n + x \sum_{n=1}^\infty F_n x^n\\
+%&=x+ x^2y+xy.
+%\end{align*}
 
-Since $y=x+x^2y+xy$, solving for $y$ gives $\sum\limits_{n=1}^\infty F_n x^n = \frac{x}{1-x-x^2}$.
-}\\
+%Since $y=x+x^2y+xy$, solving for $y$ gives $\sum\limits_{n=1}^\infty F_n x^n = \frac{x}{1-x-x^2}$.
+%}\\
 
 
-When we determined $F_{10}=55$ above, we had to use a recursive formula for $F_n$ and needed to evaluate all of the terms before it.  A use of this series in Example~\ref{ex_ps6} is to determine an \emph{explicit} formula (known as Binet's Formula) for $F_n$.  We do this in the following example by rewriting $\frac{x}{1-x-x^2}$ in terms of geometric series to determine the coefficients.\\
+%When we determined $F_{10}=55$ above, we had to use a recursive formula for $F_n$ and needed to evaluate all of the terms before it.  A use of this series in Example~\ref{ex_ps6} is to determine an \emph{explicit} formula (known as Binet's Formula) for $F_n$.  We do this in the following example by rewriting $\frac{x}{1-x-x^2}$ in terms of geometric series to determine the coefficients.\\
 
-\example{ex_ps7}{Determine an explicit formula for the terms of the Fibonacci sequence.}
-{Use the series $\sum\limits_{n=1}^\infty F_n x^n = \frac{x}{1-x-x^2}$ from Example~\ref{ex_ps6} to derive an explicit formula for $F_n$.
-}
-{The denominator $1-x-x^2$ does not factor in the usual sense (rational coefficients).  However, as $1-x-x^2=0$ has the solutions $\frac{-1\pm\sqrt{5}}{2}$ from the quadratic formula, we can factor $1-x-x^2=-(x+\varphi)(x+{\psi})$ where we let $\varphi=\frac{1+\sqrt{5}}{2}$ (called the \emph{golden ratio}) and ${\psi}=\frac{1-\sqrt{5}}{2}$.  Therefore, we can decompose $$\frac{x}{1-x-x^2}=\frac{A}{x+\varphi}+\frac{B}{x+{\psi}}$$ using partial fractions.  We will not show the steps, but we get $A= - \varphi / \sqrt{5}$ and $B={\psi} / \sqrt{5}$.
+%\example{ex_ps7}{Determine an explicit formula for the terms of the Fibonacci sequence.}
+%{Use the series $\sum\limits_{n=1}^\infty F_n x^n = \frac{x}{1-x-x^2}$ from Example~\ref{ex_ps6} to derive an explicit formula for $F_n$.
+%}
+%{The denominator $1-x-x^2$ does not factor in the usual sense (rational coefficients).  However, as $1-x-x^2=0$ has the solutions $\frac{-1\pm\sqrt{5}}{2}$ from the quadratic formula, we can factor $1-x-x^2=-(x+\varphi)(x+{\psi})$ where we let $\varphi=\frac{1+\sqrt{5}}{2}$ (called the \emph{golden ratio}) and ${\psi}=\frac{1-\sqrt{5}}{2}$.  Therefore, we can decompose $$\frac{x}{1-x-x^2}=\frac{A}{x+\varphi}+\frac{B}{x+{\psi}}$$ using partial fractions.  We will not show the steps, but we get $A= - \varphi / \sqrt{5}$ and $B={\psi} / \sqrt{5}$.
 
-Note that $$\frac{1}{\varphi}=\frac{2}{1+\sqrt{5}}\cdot\frac{1-\sqrt{5}}{1-\sqrt{5}} = \frac{2}{1-5}\left(1-\sqrt{5}\right) = \frac{1-\sqrt{5}}{-2}=
--{\psi}$$ and $$\frac{1}{{\psi}}=\frac{2}{1-\sqrt{5}}\cdot\frac{1+\sqrt{5}}{1+\sqrt{5}} = \frac{2}{1-5}\left(1+\sqrt{5}\right) = \frac{1+\sqrt{5}}{-2}=
--\varphi.$$
+%Note that $$\frac{1}{\varphi}=\frac{2}{1+\sqrt{5}}\cdot\frac{1-\sqrt{5}}{1-\sqrt{5}} = \frac{2}{1-5}\left(1-\sqrt{5}\right) = \frac{1-\sqrt{5}}{-2}=
+%-{\psi}$$ and $$\frac{1}{{\psi}}=\frac{2}{1-\sqrt{5}}\cdot\frac{1+\sqrt{5}}{1+\sqrt{5}} = \frac{2}{1-5}\left(1+\sqrt{5}\right) = \frac{1+\sqrt{5}}{-2}=
+%-\varphi.$$
 
-Therefore
+%Therefore
 
-\begin{align*}
-\sum\limits_{n=0}^\infty F_n x^n &= \frac{x}{1-x-x^2}\\
-&= \frac{1}{\sqrt{5}} \left( \frac{{\psi}}{{\psi}+x} - \frac{\varphi}{\varphi+x} \right)\\
-&= \frac{1}{\sqrt{5}} \left( \frac{1}{1+x/{\psi}} - \frac{1}{1+x/\varphi} \right)\\
-&= \frac{1}{\sqrt{5}} \left( \frac{1}{1-\varphi x} - \frac{1}{1-{\psi} x} \right)\\
-&= \frac{1}{\sqrt{5}} \left(\sum_{n=0}^\infty (\varphi x)^n -  \sum_{n=0}^\infty (\psi x)^n\right)\\
-&= \sum_{n=0}^\infty \frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right) x^n\\
-\end{align*}
+%\begin{align*}
+%\sum\limits_{n=0}^\infty F_n x^n &= \frac{x}{1-x-x^2}\\
+%&= \frac{1}{\sqrt{5}} \left( \frac{{\psi}}{{\psi}+x} - \frac{\varphi}{\varphi+x} \right)\\
+%&= \frac{1}{\sqrt{5}} \left( \frac{1}{1+x/{\psi}} - \frac{1}{1+x/\varphi} \right)\\
+%&= \frac{1}{\sqrt{5}} \left( \frac{1}{1-\varphi x} - \frac{1}{1-{\psi} x} \right)\\
+%&= \frac{1}{\sqrt{5}} \left(\sum_{n=0}^\infty (\varphi x)^n -  \sum_{n=0}^\infty (\psi x)^n\right)\\
+%&= \sum_{n=0}^\infty \frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right) x^n\\
+%\end{align*}
 
-Equating coefficients of $x^n$ on each side, we obtain the explicit formula $$F_n=\frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right)=
-\frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right)=\frac{1}{\sqrt{5}}\left(\left(\frac{1+\sqrt{5}}{2}\right)^n - \left(\frac{1-\sqrt{5}}{2}\right)^n\right).$$
+%Equating coefficients of $x^n$ on each side, we obtain the explicit formula $$F_n=\frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right)=
+%\frac{1}{\sqrt{5}}\left(\varphi^n - \psi^n\right)=\frac{1}{\sqrt{5}}\left(\left(\frac{1+\sqrt{5}}{2}\right)^n - \left(\frac{1-\sqrt{5}}{2}\right)^n\right).$$
 
-As an example, when $n=10$, we can plug in $n=10$ into the formula instead of computing all the previous terms.
-$$F_{10}=\frac{1}{\sqrt{5}}\left(\left(\frac{1+\sqrt{5}}{2}\right)^{10} - \left(\frac{1-\sqrt{5}}{2}\right)^{10}\right)=55$$
-It is interesting that the instances of $\sqrt{5}$ cancel when an integer $n$ is plugged in.  It is also interesting how we only care about the coefficients in this example, not the interval of convergence.
-}
+%As an example, when $n=10$, we can plug in $n=10$ into the formula instead of computing all the previous terms.
+%$$F_{10}=\frac{1}{\sqrt{5}}\left(\left(\frac{1+\sqrt{5}}{2}\right)^{10} - \left(\frac{1-\sqrt{5}}{2}\right)^{10}\right)=55$$
+%It is interesting that the instances of $\sqrt{5}$ cancel when an integer $n$ is plugged in.  It is also interesting how we only care about the coefficients in this example, not the interval of convergence.
+%}
 
 
 
