Chapter 1: Various changes and additions

--- a/exercises/01_03_exercises.tex
+++ b/exercises/01_03_exercises.tex
@@ -9,6 +9,7 @@
 \ifthenelse{\boolean{printquestions}}{\columnbreak}{}
 \exsetinput{exercises/01_03_exset_03}
 \exsetinput{exercises/01_03_exset_04}
+\exsetinput{exercises/01_03_exset_07}
 \exsetinput{exercises/01_03_exset_06}
 \exsetinput{exercises/01_03_exset_05}
 %\exinput{exercises/01_03_ex_38}
