--- a/exercises/01_05_exset_02.tex
+++ b/exercises/01_05_exset_02.tex
@@ -4,3 +4,8 @@
 \exinput{exercises/01_05_ex_19}
 \exinput{exercises/01_05_ex_20}
 \exinput{exercises/01_05_ex_21}
+\exinput{exercises/01_05_ex_44}
+\exinput{exercises/01_05_ex_45}
+\exinput{exercises/01_05_ex_46}
+\exinput{exercises/01_05_ex_47}
+\exinput{exercises/01_05_ex_48}
