--- a/exercises/01_07_exset_04.tex
+++ b/exercises/01_07_exset_04.tex
@@ -56,7 +56,16 @@
 \exinput{exercises/01_07_transcendental_04}
 \exinput{exercises/01_07_transcendental_05}
 \exinput{exercises/01_07_transcendental_06}
+\exinput{exercises/01_07_transcendental_18}
+\exinput{exercises/01_07_transcendental_19}
 \exinput{exercises/01_07_transcendental_07}
 \exinput{exercises/01_07_transcendental_08}
 \exinput{exercises/01_07_transcendental_09}
 \exinput{exercises/01_07_transcendental_10}
+\exinput{exercises/01_07_transcendental_11}
+\exinput{exercises/01_07_transcendental_12}
+\exinput{exercises/01_07_transcendental_13}
+\exinput{exercises/01_07_transcendental_14}
+\exinput{exercises/01_07_transcendental_15}
+\exinput{exercises/01_07_transcendental_16}
+\exinput{exercises/01_07_transcendental_17}
