--- a/exercises/01_03_ex_20.tex
+++ b/exercises/01_03_ex_20.tex
@@ -1,3 +1,3 @@
-{$\ds \lim_{x\to\pi}\frac{x^2+3x+5}{5x^2-2x-3}$}
-{$\frac{\pi^2+3\pi+5}{5\pi^2-2\pi-3} \approx 0.6064$}
+{$\ds \lim_{x\to\sqrt{3}}\frac{x^2-3}{x^4-3x^2}$}
+{$1/3$}
 
