--- a/exercises/02_01_ex_22.tex
+++ b/exercises/02_01_ex_22.tex
@@ -1,7 +1,7 @@
 {$\ds r(x) = \frac{1}{x}$, at $c=-2$.
 }
 {\begin{enumerate}
-\item		$y = -1/4(x+2) - 1/2$
-\item		$y = 4(x+2) - 1/2$
+\item		$\ds y = -\frac{1}{4}(x+2) - \frac{1}{2}$
+\item		$\ds y = 4(x+2) - \frac{1}{2}$
 \end{enumerate}
 }
