--- a/exercises/02_01_exset_02.tex
+++ b/exercises/02_01_exset_02.tex
@@ -6,5 +6,6 @@
 \exinput{exercises/02_01_ex_12}
 \exinput{exercises/02_01_ex_13}
 \exinput{exercises/02_01_ex_14}
+\exinput{exercises/02_01_ex_14z}
 \exinput{exercises/02_01_ex_15}
 \exinput{exercises/02_01_ex_16}
