--- a/exercises/02_01_exset_03.tex
+++ b/exercises/02_01_exset_03.tex
@@ -10,5 +10,6 @@
 \exinput{exercises/02_01_ex_19}
 \exinput{exercises/02_01_ex_20}
 \exinput{exercises/02_01_ex_21}
+\exinput{exercises/02_01_ex_21z}
 \exinput{exercises/02_01_ex_22}
 \exinput{exercises/02_01_ex_23}
