--- a/text/01_Analytic_Limits.tex
+++ b/text/01_Analytic_Limits.tex
@@ -293,6 +293,8 @@ Let $f(x) = -1.5x^2+11.5x$; find $\ds \lim_{h\to 0}\frac{f(1+h)-f(1)}{h}.$}
 		\begin{align*}
 		\lim_{h\to 0}\frac{f(1+h)-f(1)}{h} 	&= 	\lim_{h\to 0}\frac{-1.5(1+h)^2 + 11.5(1+h) - \left(-1.5(1)^2+11.5(1)\right)}{h} \\
 																				&=	\lim_{h\to 0}\frac{-1.5(1+2h+h^2) + 11.5+11.5h - 10}{h}\\
+&=	\lim_{h\to 0}
+\frac{-1.5-3h-1.5 h^2 + 11.5+11.5h - 10}{h}\\
 																				&=	\lim_{h\to 0}\frac{-1.5h^2 +8.5h}{h}\\
 																				&= 	\lim_{h\to 0}\frac{h(-1.5h+8.5)}h\\
 																				&=	\lim_{h\to 0}(-1.5h+8.5) \quad (\text{\small using Theorem \ref{thm:limit_allbut1}, as $h\neq 0$}) \\
